# internal/server/http/v1/status.go
@@ -29,12 +29,12 @@ func newStatusRoutes(g *gin.RouterGroup, status service.Status, logger logger.Lo
 //	@Summary		CreateStatus
 //	@Description	Create new task status.
 //	@UUID			100
-//	@Param			params	body		service.CreateStatusParams		true	"required JSON body with status name"
+//	@Param			params	body		service.CreateStatusParams		true	"Required JSON body with status name"
 //	@Success		200		{object}	service.CreateStatusResponse	"Status was created successfully"
 //	@Failure		400		{object}	response						"Invalid input data"
 //	@Failure		500		{object}	response						"Internal error"
 //	@Router			/statuses/ [post]
-//	@Tags			Statuses
+//	@Tags			Status
 func (r *statusRoutes) CreateStatus(ctx *gin.Context) {
 	var params service.CreateStatusParams
 
